[doc] hello_world -> example

--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -10,27 +10,28 @@ function(example example)
     add_test(example.${tmp} example.${tmp})
 endfunction()
 
-example(annotations)
-example(automatic_injection)
-example(bind_non_owning_ptr)
-example(bindings)
-example(configuration)
-example(constructor_injection)
-example(constructor_signature)
-example(custom_policy)
-example(custom_provider)
-example(custom_scope)
-example(deduce_scope)
-example(dynamic_bindings)
-example(fwd_bindings)
-example(hello_world)
-example(modules)
-example(motivation)
-example(multiple_bindings)
-example(multiple_interfaces)
-example(pool_provider)
-example(scopes)
-example(try_it)
+example(annotations.cpp)
+example(automatic_injection.cpp)
+example(bind_non_owning_ptr.cpp)
+example(bindings.cpp)
+example(configuration.cpp)
+example(constructor_injection.cpp)
+example(constructor_signature.cpp)
+example(custom_policy.cpp)
+example(custom_provider.cpp)
+example(custom_scope.cpp)
+example(deduce_scope.cpp)
+example(dynamic_bindings.cpp)
+example(eager_singletons.cpp)
+example(example.cpp)
+example(fwd_bindings.cpp)
+example(modules.cpp)
+example(motivation.cpp)
+example(multiple_bindings.cpp)
+example(multiple_interfaces.cpp)
+example(pool_provider.cpp)
+example(scopes.cpp)
+example(try_it.cpp)
 
 example(performance/create_bound_interface)
 example(performance/create_bound_interface_via_exposed_module)
