--- a/extension/CMakeLists.txt
+++ b/extension/CMakeLists.txt
@@ -13,6 +13,7 @@ endfunction()
 extension(bindings/constructor_bindings)
 extension(bindings/contextual_bindings)
 extension(injections/assisted_injection)
+extension(injections/factory)
 extension(injections/lazy)
 extension(injections/named_parameters)
 extension(injections/xml_injection)
