--- a/.travis.yml
+++ b/.travis.yml
@@ -105,6 +105,38 @@ matrix:
         packages: ["clang-3.8", "libstdc++-5-dev", "gdb"]
         sources: ["ubuntu-toolchain-r-test", "llvm-toolchain-precise-3.8"]
   - os: linux
+    env: BS=bjam TOOLSET=clang MEMCHECK=VALGRIND BENCHMARK=QUICK CXX=clang++-3.9
+    addons:
+      apt:
+        packages: ["clang-3.9", "libstdc++-5-dev", "valgrind", "gdb"]
+        sources: ["ubuntu-toolchain-r-test", "llvm-toolchain-precise"]
+  - os: linux
+    env: BS=bjam TOOLSET=clang MEMCHECK=VALGRIND LIBCXX=ON CXX=clang++-3.9
+    addons:
+      apt:
+        packages: ["clang-3.9", "libstdc++-5-dev", "valgrind", "gdb"]
+        sources: ["ubuntu-toolchain-r-test", "llvm-toolchain-precise"]
+  - os: linux
+    env: BS=cmake CXX=clang++-3.9
+    addons:
+      apt:
+        packages: ["clang-3.9", "libstdc++-5-dev", "gdb"]
+        sources: ["ubuntu-toolchain-r-test", "llvm-toolchain-precise"]
+  #- os: linux
+    #env:
+      #- LLVM_VERSION=3.8.0
+      #- LLVM_ARCHIVE_PATH=$HOME/clang+llvm.tar.xz
+      #- COMPILER=clang++
+      #- CPPFLAGS="-I $HOME/clang-$LLVM_VERSION/include/c++/v1"
+      #- CXXFLAGS=-lc++
+      #- PATH=$HOME/clang-$LLVM_VERSION/bin:$PATH
+      #- LD_LIBRARY_PATH=$HOME/clang-$LLVM_VERSION/lib:$LD_LIBRARY_PATH
+    #before_install:
+     #- wget http://llvm.org/releases/$LLVM_VERSION/clang+llvm-$LLVM_VERSION-x86_64-linux-gnu-ubuntu-14.04.tar.xz -O $LLVM_ARCHIVE_PATH
+     #- mkdir $HOME/clang-$LLVM_VERSION
+     #- tar xf $LLVM_ARCHIVE_PATH -C $HOME/clang-$LLVM_VERSION --strip-components 1
+
+  - os: linux
     env: BS=bjam TOOLSET=gcc GCOV=gcov-5 VARIANT=coverage MEMCHECK=VALGRIND CXX=g++-5
     addons:
       apt:
@@ -123,23 +155,53 @@ matrix:
         packages: ["g++-5", "libstdc++-5-dev", "gdb"]
         sources: ["ubuntu-toolchain-r-test"]
   - os: linux
-    env: BS=cmake BENCHMARK=ON CXX=g++-5
+    env: BS=cmake BENCHMARK=QUICK CXX=g++-5
     addons:
       apt:
         packages: ["g++-5", "libstdc++-5-dev", "gdb"]
         sources: ["ubuntu-toolchain-r-test"]
+  - os: linux
+    env: BS=bjam TOOLSET=gcc VARIANT=analyze CXX=g++-6
+    addons:
+      apt:
+        packages: ["g++-6", "libstdc++-6-dev", "gdb"]
+        sources: ["ubuntu-toolchain-r-test"]
+  - os: linux
+    env: BS=bjam TOOLSET=gcc BENCHMARK=QUICK CXX=g++-6
+    addons:
+      apt:
+        packages: ["g++-6", "libstdc++-6-dev", "gdb"]
+        sources: ["ubuntu-toolchain-r-test"]
+  - os: linux
+    env: BS=cmake BENCHMARK=ON CXX=g++-6
+    addons:
+      apt:
+        packages: ["g++-6", "libstdc++-6-dev", "gdb"]
+        sources: ["ubuntu-toolchain-r-test"]
   - os: osx
-    osx_image: xcode6.1
+    osx_image: beta-xcode6.1
     env: BS=bjam TOOLSET=clang CXX=clang++
   - os: osx
-    osx_image: xcode6.1
+    osx_image: beta-xcode6.1
     env: BS=bjam CXX=clang++
-  #- os: osx
-    #osx_image: xcode6.4
-    #env: BS=bjam TOOLSET=clang CXX=clang++
-  #- os: osx
-    #osx_image: xcode6.4
-    #env: BS=cmake CXX=clang++
+  - os: osx
+    osx_image: beta-xcode6.2
+    env: BS=bjam TOOLSET=clang CXX=clang++
+  - os: osx
+    osx_image: beta-xcode6.2
+    env: BS=bjam CXX=clang++
+  - os: osx
+    osx_image: beta-xcode6.3
+    env: BS=bjam TOOLSET=clang CXX=clang++
+  - os: osx
+    osx_image: beta-xcode6.3
+    env: BS=bjam CXX=clang++
+  - os: osx
+    osx_image: beta-xcode6.4
+    env: BS=bjam TOOLSET=clang CXX=clang++
+  - os: osx
+    osx_image: beta-xcode6.4
+    env: BS=bjam CXX=clang++
   - os: osx
     osx_image: xcode7
     env: BS=bjam TOOLSET=clang CXX=clang++
@@ -151,18 +213,24 @@ matrix:
     env: BS=bjam TOOLSET=clang CXX=clang++
   - os: osx
     osx_image: xcode7.1
-    env: BS=bjam BENCHMARK=ON CXX=clang++
+    env: BS=bjam BENCHMARK=QUICK CXX=clang++
   - os: osx
     osx_image: xcode7.2
     env: BS=bjam TOOLSET=clang CXX=clang++
   - os: osx
     osx_image: xcode7.2
-    env: BS=cmake BENCHMARK=ON CXX=clang++
+    env: BS=cmake BENCHMARK=QUICK CXX=clang++
   - os: osx
     osx_image: xcode7.3
     env: BS=bjam TOOLSET=clang CXX=clang++
   - os: osx
     osx_image: xcode7.3
+    env: BS=cmake BENCHMARK=QUICK CXX=clang++
+  - os: osx
+    osx_image: xcode8
+    env: BS=bjam TOOLSET=clang CXX=clang++
+  - os: osx
+    osx_image: xcode8
     env: BS=cmake BENCHMARK=ON CXX=clang++
 
 before_install:
