--- a/.travis.yml
+++ b/.travis.yml
@@ -122,20 +122,6 @@ matrix:
       apt:
         packages: ["clang-3.9", "libstdc++-5-dev", "gdb"]
         sources: ["ubuntu-toolchain-r-test", "llvm-toolchain-precise"]
-  #- os: linux
-    #env:
-      #- LLVM_VERSION=3.8.0
-      #- LLVM_ARCHIVE_PATH=$HOME/clang+llvm.tar.xz
-      #- COMPILER=clang++
-      #- CPPFLAGS="-I $HOME/clang-$LLVM_VERSION/include/c++/v1"
-      #- CXXFLAGS=-lc++
-      #- PATH=$HOME/clang-$LLVM_VERSION/bin:$PATH
-      #- LD_LIBRARY_PATH=$HOME/clang-$LLVM_VERSION/lib:$LD_LIBRARY_PATH
-    #before_install:
-     #- wget http://llvm.org/releases/$LLVM_VERSION/clang+llvm-$LLVM_VERSION-x86_64-linux-gnu-ubuntu-14.04.tar.xz -O $LLVM_ARCHIVE_PATH
-     #- mkdir $HOME/clang-$LLVM_VERSION
-     #- tar xf $LLVM_ARCHIVE_PATH -C $HOME/clang-$LLVM_VERSION --strip-components 1
-
   - os: linux
     env: BS=bjam TOOLSET=gcc GCOV=gcov-5 VARIANT=coverage MEMCHECK=VALGRIND CXX=g++-5
     addons:
@@ -190,12 +176,12 @@ matrix:
   - os: osx
     osx_image: beta-xcode6.2
     env: BS=bjam CXX=clang++
-  - os: osx
-    osx_image: beta-xcode6.3
-    env: BS=bjam TOOLSET=clang CXX=clang++
-  - os: osx
-    osx_image: beta-xcode6.3
-    env: BS=bjam CXX=clang++
+  #- os: osx
+    #osx_image: beta-xcode6.3
+    #env: BS=bjam TOOLSET=clang CXX=clang++
+  #- os: osx
+    #osx_image: beta-xcode6.3
+    #env: BS=bjam CXX=clang++
   - os: osx
     osx_image: beta-xcode6.4
     env: BS=bjam TOOLSET=clang CXX=clang++
