[travis] allow failures on clang-3.9

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,11 @@ branches:
 
 matrix:
   fast_finish: true
+  allow_failures:
+    - env: BS=bjam TOOLSET=clang MEMCHECK=VALGRIND BENCHMARK=QUICK CXX=clang++-3.9
+    - env: BS=bjam TOOLSET=clang MEMCHECK=VALGRIND LIBCXX=ON CXX=clang++-3.9
+    - env: BS=cmake CXX=clang++-3.9
+
   include:
   - os: linux
     env: DOCUMENTATION=ON
@@ -165,28 +170,22 @@ matrix:
         packages: ["g++-6", "libstdc++-6-dev", "gdb"]
         sources: ["ubuntu-toolchain-r-test"]
   - os: osx
-    osx_image: beta-xcode6.1
+    osx_image: xcode6.1
     env: BS=bjam TOOLSET=clang CXX=clang++
   - os: osx
-    osx_image: beta-xcode6.1
+    osx_image: xcode6.1
     env: BS=bjam CXX=clang++
   - os: osx
-    osx_image: beta-xcode6.2
+    osx_image: xcode6.2
     env: BS=bjam TOOLSET=clang CXX=clang++
   - os: osx
-    osx_image: beta-xcode6.2
+    osx_image: xcode6.2
     env: BS=bjam CXX=clang++
-  #- os: osx
-    #osx_image: beta-xcode6.3
-    #env: BS=bjam TOOLSET=clang CXX=clang++
-  #- os: osx
-    #osx_image: beta-xcode6.3
-    #env: BS=bjam CXX=clang++
   - os: osx
-    osx_image: beta-xcode6.4
+    osx_image: xcode6.4
     env: BS=bjam TOOLSET=clang CXX=clang++
   - os: osx
-    osx_image: beta-xcode6.4
+    osx_image: xcode6.4
     env: BS=bjam CXX=clang++
   - os: osx
     osx_image: xcode7
