--- a/extension/CMakeLists.txt
+++ b/extension/CMakeLists.txt
@@ -14,6 +14,7 @@ extension(bindings/constructor_bindings)
 extension(bindings/contextual_bindings)
 extension(injections/assisted_injection)
 extension(injections/factory)
+extension(injections/generics)
 extension(injections/lazy)
 extension(injections/named_parameters)
 extension(injections/xml_injection)
