[fix] pph generation fix and clang-3.9 optimization fix

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,10 +17,6 @@ branches:
 
 matrix:
   fast_finish: true
-  allow_failures:
-    - env: BS=bjam TOOLSET=clang MEMCHECK=VALGRIND BENCHMARK=QUICK CXX=clang++-3.9
-    - env: BS=bjam TOOLSET=clang MEMCHECK=VALGRIND LIBCXX=ON CXX=clang++-3.9
-    - env: BS=cmake CXX=clang++-3.9
 
   include:
   - os: linux
@@ -181,12 +177,12 @@ matrix:
   - os: osx
     osx_image: xcode6.2
     env: BS=bjam CXX=clang++
-  - os: osx
-    osx_image: xcode6.4
-    env: BS=bjam TOOLSET=clang CXX=clang++
-  - os: osx
-    osx_image: xcode6.4
-    env: BS=bjam CXX=clang++
+  #- os: osx
+    #osx_image: xcode6.4
+    #env: BS=bjam TOOLSET=clang CXX=clang++
+  #- os: osx
+    #osx_image: xcode6.4
+    #env: BS=bjam CXX=clang++
   - os: osx
     osx_image: xcode7
     env: BS=bjam TOOLSET=clang CXX=clang++
