--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -40,7 +40,7 @@ matrix:
   fast_finish: true
 
 install:
-  - cinst drmemory
+  - cinst -y drmemory
   - appveyor DownloadFile http://downloads.sourceforge.net/mingw-w64/x86_64-5.2.0-release-posix-seh-rt_v4-rev1.7z
   - 7z x x86_64-5.2.0-release-posix-seh-rt_v4-rev1.7z > nul
   - C:\"Program Files (x86)"\"Microsoft Visual Studio 14.0"\VC\vcvarsall.bat %PLATFORM%
