--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -6,45 +6,60 @@
 #
 version: 1.0.{build}
 clone_folder: c:\di
+shallow_clone: true
 
 branches:
   except:
   - benchmarks
   - gh-pages
 
+cache:
+  - C:\cmake-3.6.1-win32-x86
+
 environment:
   fast_finish: true
 
   matrix:
-  - platform: x64
-    os: Previous Visual Studio 2015
-    env: BS=cmake GENERATOR="MinGW Makefiles" MEMCHECK=DRMEMORY PLATFORM=amd64
+  #- platform: x64
+    #os: Previous Visual Studio 2015
+    #env: BS=cmake GENERATOR="MinGW Makefiles" MEMCHECK=DRMEMORY PLATFORM=amd64
 
-  - platform: x64
-    os: Visual Studio 2015
-    env: BS=cmake GENERATOR="MinGW Makefiles" MEMCHECK=DRMEMORY PLATFROM=amd64
+  #- platform: x64
+    #os: Visual Studio 2015
+    #env: BS=cmake GENERATOR="MinGW Makefiles" MEMCHECK=DRMEMORY PLATFROM=amd64
 
-  - platform: x86
-    os: Visual Studio 2015
-    env: BS=bjam GENERATOR="MinGW Makefiles" MEMCHECK=DRMEMORY PLATFROM=x86
+  #- platform: x86
+    #os: Visual Studio 2015
+    #env: BS=bjam GENERATOR="MinGW Makefiles" MEMCHECK=DRMEMORY PLATFROM=x86
 
-  - platform: x86
-    os: Visual Studio 2015
-    env: BS=bjam GENERATOR="MinGW Makefiles" MEMCHECK=DRMEMORY PLATFROM=x86
+  #- platform: x86
+    #os: Visual Studio 2015
+    #env: BS=bjam GENERATOR="MinGW Makefiles" MEMCHECK=DRMEMORY PLATFROM=x86
+
+  #- platform: x64
+    #os: Visual Studio 2015 Update 2
+    #env: BS=cmake GENERATOR="MinGW Makefiles" MEMCHECK=DRMEMORY PLATFROM=amd64
 
   - platform: x64
     os: Visual Studio 2015 Update 2
-    env: BS=cmake GENERATOR="MinGW Makefiles" MEMCHECK=DRMEMORY PLATFROM=amd64
+    env: BS=cmake CMAKE="C:\cmake-3.6.1-win32-x86" CMAKE_FLAGS="-T v140_clang_c2" GENERATOR="MinGW Makefiles" MEMCHECK=DRMEMORY PLATFROM=amd64
 
 matrix:
   fast_finish: true
 
 install:
+  - ps: |
+      if (![IO.File]::Exists("C:\cmake-3.6.1-win32-x86\bin\cmake.exe")) {
+        pushd c:\
+        Start-FileDownload 'https://cmake.org/files/v3.6/cmake-3.6.1-win32-x86.zip'
+        7z x -y cmake-3.6.1-win32-x86.zip
+        popd
+      }
   - cinst -y drmemory
   - appveyor DownloadFile http://downloads.sourceforge.net/mingw-w64/x86_64-5.2.0-release-posix-seh-rt_v4-rev1.7z
   - 7z x x86_64-5.2.0-release-posix-seh-rt_v4-rev1.7z > nul
   - C:\"Program Files (x86)"\"Microsoft Visual Studio 14.0"\VC\vcvarsall.bat %PLATFORM%
   - set PATH=%PATH%;mingw64\bin
 
-build_script:
+test_script:
   - mingw32-make all
