--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -61,5 +61,5 @@ install:
   - C:\"Program Files (x86)"\"Microsoft Visual Studio 14.0"\VC\vcvarsall.bat %PLATFORM%
   - set PATH=%PATH%;mingw64\bin
 
-test_script:
+build_script:
   - mingw32-make all
