--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -42,12 +42,12 @@ environment:
 
   - platform: x64
     os: Visual Studio 2015 Update 2
-    env: BS=cmake
-    env: CMAKE="C:\cmake-3.6.1-win32-x86"
-    env: CMAKE_FLAGS="-T v140_clang_c2" 
-    env: GENERATOR="MinGW Makefiles"
-    env: MEMCHECK=DRMEMORY
-    env: PLATFROM=amd64
+    -BS: cmake
+    -CMAKE: "C:\cmake-3.6.1-win32-x86"
+    -CMAKE_FLAGS: "-T v140_clang_c2" 
+    -GENERATOR: "MinGW Makefiles"
+    -MEMCHECK: DRMEMORY
+    -PLATFROM: amd64
 
 matrix:
   fast_finish: true
