--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -43,7 +43,6 @@ environment:
   - platform: x64
     os: Visual Studio 2015 Update 2
     BS: cmake
-    CMAKE: "C:\\\\cmake-3.6.1-win32-x86\\\\bin\\\\cmake"
     CMAKE_FLAGS: "-T v140_clang_c2"
     MEMCHECK: DRMEMORY
 
@@ -62,7 +61,7 @@ install:
   - appveyor DownloadFile http://downloads.sourceforge.net/mingw-w64/x86_64-5.2.0-release-posix-seh-rt_v4-rev1.7z
   - 7z x x86_64-5.2.0-release-posix-seh-rt_v4-rev1.7z > nul
   - C:\"Program Files (x86)"\"Microsoft Visual Studio 14.0"\VC\vcvarsall.bat %PLATFORM%
-  - set PATH=%PATH%;mingw64\bin
+  - set PATH=C:\cmake-3.6.1-win32-x86\bin;mingw64\bin;%PATH%;
 
 build_script:
   - mingw32-make all
