--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -20,21 +20,21 @@ environment:
   fast_finish: true
 
   matrix:
-  - platform: x64
-    os: Previous Visual Studio 2015
-    BS: cmake
-    MEMCHECK: DRMEMORY
+  #- platform: x64
+    #os: Previous Visual Studio 2015
+    #BS: cmake
+    #MEMCHECK: DRMEMORY
 
-  - platform: x64
-    os: Visual Studio 2015
-    BS: cmake
-    MEMCHECK: DRMEMORY
+  #- platform: x64
+    #os: Visual Studio 2015
+    #BS: cmake
+    #MEMCHECK: DRMEMORY
 
-  - platform: x64
-    os: Visual Studio 2015 Update 2
-    BS: cmake
-    CMAKE_FLAGS: "-T v140_clang_c2"
-    MEMCHECK: DRMEMORY
+  #- platform: x64
+    #os: Visual Studio 2015 Update 2
+    #BS: cmake
+    #CMAKE_FLAGS: "-T v140_clang_c2"
+    #MEMCHECK: DRMEMORY
 
   - platform: x86
     os: Visual Studio 2015 Update 2
