--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,6 @@
 copyright: Copyright &copy; 2016
 
-site_name: Boost.DI
+site_name: "[Boost].DI"
 site_url: http://boost-experimental.github.io/di
 site_author: Kris Jusiak
 repo_url: https://github.com/boost-experimental/di
