[doc] readme update

--- a/doc/mkdocs.yml
+++ b/doc/mkdocs.yml
@@ -16,7 +16,7 @@ pages:
 - Introduction: index.md
 - Overview: overview.md
 - Tutorial: tutorial.md
-- Try It!: try_it.md
+- Try It Online!: try_it.md
 - Benchmarks: benchmarks.md
 - User Guide: user_guide.md
 - Examples: examples.md
