--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -16,10 +16,9 @@ pages:
 - Introduction: index.md
 - Overview: overview.md
 - Tutorial: tutorial.md
-- Try It!: try_it.md
+- Try It Online!: try_it.md
 - Benchmarks: benchmarks.md
 - User Guide: user_guide.md
-- Design: design.md
 - Examples: examples.md
 - Extensions: extensions.md
 - FAQ: FAQ.md
