--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -22,16 +22,19 @@ environment:
   matrix:
   - platform: x64
     image: Previous Visual Studio 2015
+    VisualStudioVersion: 14.0
     BS: cmake
     MEMCHECK: DRMEMORY
 
   - platform: x64
     image: Visual Studio 2015
+    VisualStudioVersion: 14.0
     BS: cmake
     MEMCHECK: DRMEMORY
 
   - platform: x64
     image: Visual Studio 2017 RC
+    VisualStudioVersion: 15.0
     BS: cmake
     MEMCHECK: DRMEMORY
 
@@ -49,7 +52,7 @@ install:
   - cinst -y drmemory
   - appveyor DownloadFile http://downloads.sourceforge.net/mingw-w64/x86_64-5.2.0-release-posix-seh-rt_v4-rev1.7z
   - 7z x x86_64-5.2.0-release-posix-seh-rt_v4-rev1.7z > nul
-  - C:\"Program Files (x86)"\"Microsoft Visual Studio 15.0"\VC\vcvarsall.bat %PLATFORM%
+  - C:\"Program Files (x86)"\"Microsoft Visual Studio %VisualStudioVersion%"\VC\vcvarsall.bat %PLATFORM%
   - set PATH=C:\cmake-3.7.2-win32-x86\bin;mingw64\bin;%PATH%;
 
 build_script:
