--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -22,19 +22,19 @@ environment:
   matrix:
   - platform: x64
     image: Previous Visual Studio 2015
-    VSPATH: C:\"Program Files (x86)"\"Microsoft Visual Studio 14.0"\VC
+    VSPATH: "C:\Program Files (x86)\Microsoft Visual Studio 14.0\VC"
     BS: cmake
     MEMCHECK: DRMEMORY
 
   - platform: x64
     image: Visual Studio 2015
-    VSPATH: C:\"Program Files (x86)"\"Microsoft Visual Studio 14.0"\VC
+    VSPATH: "C:\Program Files (x86)\Microsoft Visual Studio 14.0\VC"    
     BS: cmake
     MEMCHECK: DRMEMORY
 
   - platform: x64
     image: Visual Studio 2017 RC
-    VSPATH: C:\"Program Files (x86)"\"Microsoft Visual Studio"\2017\Enterprise\VC
+    VSPATH: "C:\Program Files (x86)\Microsoft Visual Studio\2017\Enterprise\VC"
     BS: cmake
     MEMCHECK: DRMEMORY
 
@@ -52,7 +52,7 @@ install:
   - cinst -y drmemory
   - appveyor DownloadFile http://downloads.sourceforge.net/mingw-w64/x86_64-5.2.0-release-posix-seh-rt_v4-rev1.7z
   - 7z x x86_64-5.2.0-release-posix-seh-rt_v4-rev1.7z > nul
-  - %VSPATH%\vcvarsall.bat %PLATFORM%
+  - "%VSPATH%"\vcvarsall.bat %PLATFORM%
   - set PATH=C:\cmake-3.7.2-win32-x86\bin;mingw64\bin;%PATH%;
 
 build_script:
