--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -24,18 +24,21 @@ environment:
     PLATFORM: x64
     VSPATH: C:\Program Files (x86)\Microsoft Visual Studio 14.0\VC
     BS: cmake
+    CXX: cl
     MEMCHECK: DRMEMORY
 
   - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
     PLATFORM: x64
     VSPATH: C:\Program Files (x86)\Microsoft Visual Studio 14.0\VC
     BS: cmake
+    CXX: cl
     MEMCHECK: DRMEMORY
 
   - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
     PLATFORM: x64
     VSPATH: C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\VC\Auxiliary\Build
     BS: cmake
+    CXX: cl
     MEMCHECK: DRMEMORY
 
 matrix:
