--- a/boost/mkdocs.yml
+++ b/boost/mkdocs.yml
@@ -1,5 +1,4 @@
-copyright: Copyright &copy; 2016
-
+copyright: Copyright &copy; 2012-2017 Kris Jusiak (kris at jusiak net)
 site_name: "[Boost].DI"
 site_url: http://boost-experimental.github.io/di
 site_author: Kris Jusiak
