--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -20,19 +20,19 @@ environment:
   fast_finish: true
 
   matrix:
-  - APPVEYOR_BUILD_WORKER_IMAGE: Previous Visual Studio 2015
-    PLATFORM: x64
-    VSPATH: C:\Program Files (x86)\Microsoft Visual Studio 14.0\VC
-    BS: cmake
-    CMAKE_GENERATOR: 'Visual Studio 14 2015 Win64'
-    MEMCHECK: DRMEMORY
+  #- APPVEYOR_BUILD_WORKER_IMAGE: Previous Visual Studio 2015
+    #PLATFORM: x64
+    #VSPATH: C:\Program Files (x86)\Microsoft Visual Studio 14.0\VC
+    #BS: cmake
+    #CMAKE_GENERATOR: 'Visual Studio 14 2015 Win64'
+    #MEMCHECK: DRMEMORY
 
-  - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
-    PLATFORM: x64
-    VSPATH: C:\Program Files (x86)\Microsoft Visual Studio 14.0\VC
-    BS: cmake
-    CMAKE_GENERATOR: 'Visual Studio 14 2015 Win64'
-    MEMCHECK: DRMEMORY
+  #- APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
+    #PLATFORM: x64
+    #VSPATH: C:\Program Files (x86)\Microsoft Visual Studio 14.0\VC
+    #BS: cmake
+    #CMAKE_GENERATOR: 'Visual Studio 14 2015 Win64'
+    #MEMCHECK: DRMEMORY
 
   - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
     PLATFORM: x64
