--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -24,14 +24,14 @@ environment:
     PLATFORM: x64
     VSPATH: C:\Program Files (x86)\Microsoft Visual Studio 14.0\VC
     BS: cmake
-    CMAKE_GENERATOR: 'Visual Studio 14 2015 Win64'
+    CMAKE_GENERATOR: 'Visual Studio 14 2015'
     MEMCHECK: DRMEMORY
 
   - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
     PLATFORM: x64
     VSPATH: C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\VC\Auxiliary\Build
     BS: cmake
-    CMAKE_GENERATOR: 'Visual Studio 15 2017 Win64'
+    CMAKE_GENERATOR: 'Visual Studio 15 2017'
     MEMCHECK: DRMEMORY
 
 matrix:
