--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -21,14 +21,12 @@ environment:
 
   matrix:
   - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
-    PLATFORM: x64
     VSPATH: C:\Program Files (x86)\Microsoft Visual Studio 14.0\VC
     BS: cmake
     CMAKE_GENERATOR: 'Visual Studio 14 2015'
     MEMCHECK: DRMEMORY
 
   - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
-    PLATFORM: x64
     VSPATH: C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\VC\Auxiliary\Build
     BS: cmake
     CMAKE_GENERATOR: 'Visual Studio 15 2017'
@@ -48,7 +46,7 @@ install:
   - cinst -y drmemory
   - appveyor DownloadFile http://downloads.sourceforge.net/mingw-w64/x86_64-5.2.0-release-posix-seh-rt_v4-rev1.7z
   - 7z x x86_64-5.2.0-release-posix-seh-rt_v4-rev1.7z > nul
-  - call "%VSPATH%"\vcvarsall %PLATFORM%
+  - call "%VSPATH%"\vcvarsall
   - set PATH=C:\cmake-3.7.2-win32-x86\bin;mingw64\bin;%PATH%;
 
 build_script:
