:bug: Fix #227 Exception in ctor not propagated

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -69,8 +69,9 @@ test(ft/di_injector)
 test(ft/di_no_memory_inc)
 set_source_files_properties(ft/di_no_std_inc.cpp PROPERTIES COMPILE_FLAGS -DBOOST_DI_TEST_HPP)
 test(ft/di_no_std_inc)
+set_source_files_properties(ft/di_injector_except.cpp PROPERTIES COMPILE_FLAGS -fexceptions)
+test(ft/di_injector_except)
 
 test(pt/di_compile_time)
 set(CMAKE_BUILD_TYPE Release)
 test(pt/di_run_time)
-
