[appveyor] fix missing arch for vcvarsall

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -25,12 +25,14 @@ environment:
     BS: cmake
     CMAKE_GENERATOR: Visual Studio 14 2015
     MEMCHECK: DRMEMORY
+    PLATFORM: amd64
 
   - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
     VSPATH: C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\VC\Auxiliary\Build
     BS: cmake
     CMAKE_GENERATOR: Visual Studio 15 2017
     MEMCHECK: DRMEMORY
+    PLATFORM: amd64
 
 matrix:
   fast_finish: true
@@ -46,7 +48,7 @@ install:
   - cinst -y drmemory
   - appveyor DownloadFile http://downloads.sourceforge.net/mingw-w64/x86_64-5.2.0-release-posix-seh-rt_v4-rev1.7z
   - 7z x x86_64-5.2.0-release-posix-seh-rt_v4-rev1.7z > nul
-  - call "%VSPATH%"\vcvarsall
+  - call "%VSPATH%"\vcvarsall %PLATFORM%
   - set PATH=C:\cmake-3.7.2-win32-x86\bin;mingw64\bin;%PATH%;
 
 build_script:
