:bug: Compilation error when `_GLIBCXX_DEBUG` is defined
Problem:
- Forward definitions of std components is compiler specific

Solution:
- Include a std header if available, otherwise forward declare it as
it's only required if used. The core DI compiles and works without std
headers.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -64,6 +64,8 @@ test(ft/di_config)
 test(ft/di_config_global_policies)
 test(ft/di_config_global_provider)
 test(ft/di_errors)
+set_source_files_properties(ft/di_glibcxx_debug.cpp PROPERTIES COMPILE_FLAGS -DBOOST_DI_TEST_HPP)
+test(ft/di_glibcxx_debug)
 test(ft/di_inject)
 test(ft/di_injector)
 test(ft/di_no_memory_inc)
