--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -71,7 +71,10 @@ test(ft/di_injector)
 test(ft/di_no_memory_inc)
 set_source_files_properties(ft/di_no_std_inc.cpp PROPERTIES COMPILE_FLAGS -DBOOST_DI_TEST_HPP)
 test(ft/di_no_std_inc)
-set_source_files_properties(ft/di_injector_except.cpp PROPERTIES COMPILE_FLAGS -fexceptions)
+
+if(NOT ${CMAKE_CXX_COMPILER_ID} STREQUAL MSVC) 
+    set_source_files_properties(ft/di_injector_except.cpp PROPERTIES COMPILE_FLAGS -fexceptions)
+endif()
 test(ft/di_injector_except)
 
 test(pt/di_compile_time)
