[example] bind templates and CHANGELOG update for 1.0.2
* 1.0.2 CHANGELOG update.
* Bind templates example.

--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -13,6 +13,7 @@ endfunction()
 example(annotations)
 example(automatic_injection)
 example(bind_non_owning_ptr)
+example(bind_templates)
 example(bindings)
 example(configuration)
 example(constructor_injection)
