:art: [extension] Remove duplicated `_scoped` postfix from scopes
Problem:
- Scopes are named using `_scoped` postfix although the directory implies scopes.

Solution:
- Remove the `_scoped` postfix from scope extensions.

--- a/extension/test/CMakeLists.txt
+++ b/extension/test/CMakeLists.txt
@@ -24,6 +24,6 @@ test(policies/serialize)
 test(policies/types_dumper)
 test(policies/uml_dumper)
 test(providers/mocks_provider)
-test(scopes/scoped_scope)
-test(scopes/session_scope)
-test(scopes/shared_scope)
+test(scopes/scoped)
+test(scopes/session)
+test(scopes/shared)
