:art: Decouple scope_traits from the config
Problem:
- scope_traits are implemented within the config which makes it harder to reuse.

Solution:
- Extract it into a seperate type_trait.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -51,6 +51,7 @@ test(ut/type_traits/ctor_traits)
 test(ut/type_traits/memory_traits)
 test(ut/type_traits/named_traits)
 test(ut/type_traits/rebind_traits)
+test(ut/type_traits/scope_traits)
 test(ut/wrappers/unique)
 test(ut/wrappers/shared)
 test(ut/bindings)
