--- a/extension/test/CMakeLists.txt
+++ b/extension/test/CMakeLists.txt
@@ -23,6 +23,7 @@ test(injections/xml_injection)
 test(policies/serialize)
 test(policies/types_dumper)
 test(policies/uml_dumper)
+test(providers/heap)
 test(providers/mocks_provider)
 test(scopes/scoped)
 test(scopes/session)
