:new: [extension] Rename generics to type_erasure
Problem:
- Generics extension has in-descriptive naming.
- The test is not the best example of the feature.

Solution:
- Use the type-erasure name instead.
- Use well known drawable example instead.

--- a/extension/test/CMakeLists.txt
+++ b/extension/test/CMakeLists.txt
@@ -16,7 +16,7 @@ test(injections/extensible_injector)
 test(injections/assisted_injection)
 test(injections/factory)
 test(injections/shared_factory)
-test(injections/generics)
+test(injections/type_erasure)
 test(injections/lazy)
 test(injections/named_parameters)
 test(injections/xml_injection)
