:art: [extension->example] Move type_erasure from extension to example
Problem:
- Type erasure extension is not needed to illustrate DI.

Solution:
- Use std::function to show off type erasure wiring with DI.

--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -33,6 +33,7 @@ example(multiple_interfaces)
 example(pool_provider)
 example(scopes)
 example(try_it)
+example(type_erasure)
 
 example(performance/create_bound_interface)
 example(performance/create_bound_interface_via_exposed_module)
