:white_check_mark: [travis] Use precise toolchain for clang < 3.9
Problem:
- Trusty dist doesn't have clang < 3.9.

Solution:
- Use precise dist instead for clang < 3.9 and trusty for clang >= 4.0

--- a/.travis.yml
+++ b/.travis.yml
@@ -41,17 +41,17 @@ matrix:
   - os: linux
     dist: trusty
     env: BS=cmake CXX=clang++-3.6
-    addons: { apt: { packages: ["clang-3.6", "libstdc++-5-dev", "gdb"], sources: ["ubuntu-toolchain-r-test", "llvm-toolchain-trusty-3.6"] } }
+    addons: { apt: { packages: ["clang-3.6", "libstdc++-5-dev", "gdb"], sources: ["ubuntu-toolchain-r-test", "llvm-toolchain-precise-3.6"] } }
     dist: trusty
 
   - os: linux
     env: BS=cmake CXX=clang++-3.7
-    addons: { apt: { packages: ["clang-3.7", "libstdc++-5-dev", "gdb"], sources: ["ubuntu-toolchain-r-test", "llvm-toolchain-trusty-3.7"] } }
+    addons: { apt: { packages: ["clang-3.7", "libstdc++-5-dev", "gdb"], sources: ["ubuntu-toolchain-r-test", "llvm-toolchain-precise-3.7"] } }
 
   - os: linux
     dist: trusty
     env: BS=cmake CXX=clang++-3.8
-    addons: { apt: { packages: ["clang-3.8", "libstdc++-6-dev", "gdb"], sources: ["ubuntu-toolchain-r-test", "llvm-toolchain-trusty-3.8"] } }
+    addons: { apt: { packages: ["clang-3.8", "libstdc++-6-dev", "gdb"], sources: ["ubuntu-toolchain-r-test", "llvm-toolchain-precise-3.8"] } }
 
   - os: linux
     dist: trusty
