:new: [examle] Add concepts to the polymorphism examples
Problem:
- Polymorphism can be achived using concepts but there is no example how to do it.

Solution:
- Add polymorphism concepts example.

--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -37,6 +37,7 @@ example(try_it)
 example(polymorphism/inheritance)
 example(polymorphism/type_erasure)
 example(polymorphism/templates)
+example(polymorphism/concepts)
 
 example(performance/create_bound_interface)
 example(performance/create_bound_interface_via_exposed_module)
