[cmake] Also check for AppleClang
Later CMake policies will recognize Xcode clang
as AppleClang.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -14,7 +14,7 @@ endfunction()
 
 if(${CMAKE_CXX_COMPILER_ID} STREQUAL GNU)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DBOOST_DI_NAMESPACE= -include common/test.hpp")
-elseif (${CMAKE_CXX_COMPILER_ID} STREQUAL Clang)
+elseif (${CMAKE_CXX_COMPILER_ID} STREQUAL Clang OR ${CMAKE_CXX_COMPILER_ID} STREQUAL AppleClang)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DBOOST_DI_NAMESPACE= -include common/test.hpp")
 elseif (${CMAKE_CXX_COMPILER_ID} STREQUAL MSVC)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /FIcommon/test.hpp /D_CRT_SECURE_NO_WARNINGS /DBOOST_DI_NAMESPACE=")
