:new: `bind` to specific constructor
Problem:
- There is no simple way to bind type a specific constructor.

Solution:
- Add ability to bind type to a specific constructor via:
        * `bind<T>.to<T>(args...)`
        * `bind<T>(args...)`

Note:
- Specific constructor binding also fixes binding values in a specific
scope.
        * `bind<T>.to(value).in(scope)`

commit a53699ad337d4bff4e9db0d5b957d01b40ac240c
Author: Kris Jusiak <kris@jusiak.net>
Date:   Tue Oct 9 02:41:38 2018 +0000

    :bug: Fix #352 - Hello World program compilation fails with clang7

    Problem:
    - Clang7 has different behaviour when deducing templated implicit conversion operator using rvalue.

    Solution:
    - Add case for rvalue reference.

--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -14,6 +14,7 @@ example(annotations)
 example(automatic_injection)
 example(bind_non_owning_ptr)
 example(bind_templates)
+example(bind_to_constructor)
 example(bindings)
 example(configuration)
 example(constructor_injection)
