:new: [core] `is_creatable`
Problem:
- There is no way to check at compile time whether a type is creatable with a given injector.

Solution:
- Introduce `is_creatable` which allows to check at compile time if the type is creatable.

--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -27,6 +27,7 @@ example(dynamic_bindings)
 example(eager_singletons)
 example(example)
 example(fwd_bindings)
+example(is_creatable)
 example(modules)
 example(motivation)
 example(multiple_bindings)
