Build tests and examples only if Boost.DI is top-level project

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,6 +26,20 @@ else()
     message(WARNING "Unsupported compiler!")
 endif()
 
-add_subdirectory(example)
-add_subdirectory(extension/test)
-add_subdirectory(test)
+if (CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME)
+    set(IS_TOPLEVEL_PROJECT TRUE)
+else ()
+    set(IS_TOPLEVEL_PROJECT FALSE)
+endif ()
+
+option(BOOST_DI_OPT_BUILD_TESTS "Build and perform Boost.DI tests" ${IS_TOPLEVEL_PROJECT})
+if (BOOST_DI_OPT_BUILD_TESTS)
+    enable_testing()
+    add_subdirectory(extension/test)
+    add_subdirectory(test)
+endif ()
+
+option(BOOST_DI_OPT_BUILD_EXAMPLES "Build perform Boost.DI examples" ${IS_TOPLEVEL_PROJECT})
+if (BOOST_DI_OPT_BUILD_EXAMPLES)
+    add_subdirectory(example)
+endif ()
