Rename test "ft_di_errors" to "ft_di_errors_may_take_a_minute_or_two"
All of the other tests complete in fractions of seconds.  This one can take
a minute or two, so let the user know this so they don't thing it hung.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -63,7 +63,7 @@ test(ft/di_bind)
 test(ft/di_config)
 test(ft/di_config_global_policies)
 test(ft/di_config_global_provider)
-test(ft/di_errors)
+test(ft/di_errors_may_take_a_minute_or_two)
 set_source_files_properties(ft/di_glibcxx_debug.cpp PROPERTIES COMPILE_FLAGS -DBOOST_DI_TEST_HPP)
 test(ft/di_glibcxx_debug)
 test(ft/di_inject)
